# test_openSolutions

./: README.rst  db.sqlite3  manage.py  setup.cfg  swagger: '2.0'
enterest/: asgi.py  settings.py  urls.py  wsgi.py
enterest/orders/: models.py  tests.py  urls.py  views.py
enterest/orders/migrations/: 0001_initial.py
enterest/tokenusers/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0002_auto_20200814_0200.py
rest_api/: urls.py
tokenusers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tokenusers/migrations/: 0001_initial.py
